deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incendies-deployment
  labels:
    app: incendies
spec:
  replicas: 1
  selector:
    matchLabels:
      app: incendies
  template:
    metadata:
      labels:
        app: incendies
    spec:
      containers:
      - name: incendies
        image: thomasroussaux/app-mise-en-prod:latest
        ports:
        - containerPort: 8000
