deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: incendies-service
spec:
  selector:
    app: incendies
  ports:
  - port: 8000
    targetPort: 8000
